load("@rules_cuda//:defs.bzl", "cuda_library")

cuda_library(
    name = "test",
    srcs = [
        "test.cu",
    ],
    hdrs = [
        "test.h",
    ],
    deps = [
        "//src/framework/culibrary:sum",
    ],
)

cc_library(
    name = "library1",
    hdrs = [
        ":library1.hpp",
    ],
    srcs = [
        ":library1.cpp",
        ":library11.cpp",
    ],
    deps = [
        "//src/framework/library2:library2",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        ":main.cpp",
    ],
    deps = [
        ":test",
    ],
)
