load("@rules_cc//cc:defs.bzl", "cc_toolchain_suite")

package(
    default_visibility = ["//visibility:public"],
)

cc_toolchain_suite(
    name = "crosstool",
    toolchains = {
        "k8": "@gcc-10//:gcc",
        "k8|gcc": "@gcc-10//:gcc",
        "k8|gcc-10": "@gcc-10//:gcc",
        "k8|clang": "@clang_linux//:clang",
    },
)

toolchain_type(name = "toolchain_type")
